--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "express": "^4.18.2",
     "next": "13.3.0",
+    "node-fetch": "^3.3.1",
+    "nodemon": "^2.0.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0"
