--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,10 @@
+
+[build]
+  case_sensitive = false
+
+
 [[redirects]]
   from = "/api/*"
   to = "https://my-netlify-site.netlify.app/:splat"
   status = 200
+
